syntax = "proto3";

package pb;

option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";

message DeleteMarketRequest {
  string market_id = 1;
}

message DeleteMarketResponse {
  string message = 1;
}